{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 381,
  "lineage": "d661e67b-5e75-2978-ee80-61b00f58fb60",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03d3654a979c548a8",
            "domain": "vpc",
            "id": "eipalloc-03d3654a979c548a8",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-232-91-127.compute-1.amazonaws.com",
            "public_ip": "3.232.91.127",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-EIP",
              "Owner-Email": "tofadeolawale@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-EIP",
              "Owner-Email": "tofadeolawale@gmail.com"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.ig",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669699159433:internet-gateway/igw-0120d6164e9e7cb09",
            "id": "igw-0120d6164e9e7cb09",
            "owner_id": "669699159433",
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "vpc-092c3f17dad11b29e-IG!",
              "Owner-Email": "tofadeolawale@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "vpc-092c3f17dad11b29e-IG!",
              "Owner-Email": "tofadeolawale@gmail.com"
            },
            "vpc_id": "vpc-092c3f17dad11b29e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ext-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:669699159433:loadbalancer/app/ext-alb/b8269be225a0f00c",
            "arn_suffix": "app/ext-alb/b8269be225a0f00c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ext-alb-475078703.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:669699159433:loadbalancer/app/ext-alb/b8269be225a0f00c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ext-alb",
            "security_groups": [
              "sg-0d958591cdf72c583"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00021c04e9f05027f"
              },
              {
                "subnet_id": "subnet-03f83b1931202a7e7"
              }
            ],
            "subnets": [
              "subnet-00021c04e9f05027f",
              "subnet-03f83b1931202a7e7"
            ],
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-ext-alb",
              "Owner-Email": "tofadeolawale@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-ext-alb",
              "Owner-Email": "tofadeolawale@gmail.com"
            },
            "vpc_id": "vpc-092c3f17dad11b29e",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ext-alb-sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ialb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:669699159433:loadbalancer/app/ialb/8701351c7150080a",
            "arn_suffix": "app/ialb/8701351c7150080a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-ialb-213231973.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:669699159433:loadbalancer/app/ialb/8701351c7150080a",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ialb",
            "security_groups": [
              "sg-003e2219fb04f3bf2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c432023662881fb0"
              },
              {
                "subnet_id": "subnet-0c978bea35cfb3172"
              }
            ],
            "subnets": [
              "subnet-0c432023662881fb0",
              "subnet-0c978bea35cfb3172"
            ],
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-int-alb",
              "Owner-Email": "tofadeolawale@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-int-alb",
              "Owner-Email": "tofadeolawale@gmail.com"
            },
            "vpc_id": "vpc-092c3f17dad11b29e",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:669699159433:listener/app/ext-alb/b8269be225a0f00c/46b81046fef63899",
            "certificate_arn": "arn:aws:acm:us-east-1:669699159433:certificate/7437a41a-384e-404d-9cc2-cd0f4726c829",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:669699159433:targetgroup/nginx-tgt/3a33fb3e548e4dc6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:669699159433:listener/app/ext-alb/b8269be225a0f00c/46b81046fef63899",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:669699159433:loadbalancer/app/ext-alb/b8269be225a0f00c",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.walesdevops",
            "aws_acm_certificate_validation.walesdevops",
            "aws_lb.ext-alb",
            "aws_lb_target_group.nginx-tgt",
            "aws_route53_record.walesdevops",
            "aws_security_group.ext-alb-sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.walesdevops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:669699159433:listener/app/ialb/8701351c7150080a/fcfcd5fdc6d2dcda",
            "certificate_arn": "arn:aws:acm:us-east-1:669699159433:certificate/7437a41a-384e-404d-9cc2-cd0f4726c829",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:669699159433:targetgroup/wordpress-tgt/fe2914b4f0f2a219",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:669699159433:listener/app/ialb/8701351c7150080a/fcfcd5fdc6d2dcda",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:669699159433:loadbalancer/app/ialb/8701351c7150080a",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.walesdevops",
            "aws_acm_certificate_validation.walesdevops",
            "aws_lb.ialb",
            "aws_lb_target_group.wordpress-tgt",
            "aws_route53_record.walesdevops",
            "aws_security_group.int-alb-sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.walesdevops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "tooling-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:669699159433:targetgroup/tooling-tgt/3606e16ce5167899",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:669699159433:listener-rule/app/ialb/8701351c7150080a/fcfcd5fdc6d2dcda/17d4561c628fd3ff",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "tooling.walesdevops.ml"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:669699159433:listener-rule/app/ialb/8701351c7150080a/fcfcd5fdc6d2dcda/17d4561c628fd3ff",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:669699159433:listener/app/ialb/8701351c7150080a/fcfcd5fdc6d2dcda",
            "priority": 99,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.walesdevops",
            "aws_acm_certificate_validation.walesdevops",
            "aws_lb.ialb",
            "aws_lb_listener.web-listener",
            "aws_lb_target_group.tooling-tgt",
            "aws_lb_target_group.wordpress-tgt",
            "aws_route53_record.walesdevops",
            "aws_security_group.int-alb-sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.available",
            "data.aws_route53_zone.walesdevops"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:669699159433:targetgroup/nginx-tgt/3a33fb3e548e4dc6",
            "arn_suffix": "targetgroup/nginx-tgt/3a33fb3e548e4dc6",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:669699159433:targetgroup/nginx-tgt/3a33fb3e548e4dc6",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-092c3f17dad11b29e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tooling-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:669699159433:targetgroup/tooling-tgt/3606e16ce5167899",
            "arn_suffix": "targetgroup/tooling-tgt/3606e16ce5167899",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:669699159433:targetgroup/tooling-tgt/3606e16ce5167899",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tooling-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-092c3f17dad11b29e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wordpress-tgt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:669699159433:targetgroup/wordpress-tgt/fe2914b4f0f2a219",
            "arn_suffix": "targetgroup/wordpress-tgt/fe2914b4f0f2a219",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/healthstatus",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:669699159433:targetgroup/wordpress-tgt/fe2914b4f0f2a219",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "wordpress-tgt",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-092c3f17dad11b29e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03d3654a979c548a8",
            "connectivity_type": "public",
            "id": "nat-0a3b8c867551bfcd8",
            "network_interface_id": "eni-048bd81edd1e72667",
            "private_ip": "10.0.1.109",
            "public_ip": "3.232.91.127",
            "subnet_id": "subnet-00021c04e9f05027f",
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-Nat",
              "Owner-Email": "tofadeolawale@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ACS-Nat",
              "Owner-Email": "tofadeolawale@gmail.com"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.ig",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669699159433:security-group/sg-0ea1aa10cfbcc9f8c",
            "description": "Allow incoming HTTP connections.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ea1aa10cfbcc9f8c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc_web_sg",
            "name_prefix": "",
            "owner_id": "669699159433",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Bastion-SG",
              "Owner-Email": "tofadeolawale@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "Bastion-SG",
              "Owner-Email": "tofadeolawale@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-092c3f17dad11b29e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "datalayer-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669699159433:security-group/sg-0e85d888d7450c65f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e85d888d7450c65f",
            "ingress": [],
            "name": "datalayer-sg",
            "name_prefix": "",
            "owner_id": "669699159433",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "datalayer-sg",
              "Owner-Email": "tofadeolawale@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "datalayer-sg",
              "Owner-Email": "tofadeolawale@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-092c3f17dad11b29e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ext-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669699159433:security-group/sg-0d958591cdf72c583",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d958591cdf72c583",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ext-alb-sg",
            "name_prefix": "",
            "owner_id": "669699159433",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ext-alb-sg",
              "Owner-Email": "tofadeolawale@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "ext-alb-sg",
              "Owner-Email": "tofadeolawale@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-092c3f17dad11b29e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "int-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669699159433:security-group/sg-003e2219fb04f3bf2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-003e2219fb04f3bf2",
            "ingress": [],
            "name": "my-alb-sg",
            "name_prefix": "",
            "owner_id": "669699159433",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "int-alb-sg",
              "Owner-Email": "tofadeolawale@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "int-alb-sg",
              "Owner-Email": "tofadeolawale@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-092c3f17dad11b29e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669699159433:security-group/sg-0f74fc1a504c46b2d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f74fc1a504c46b2d",
            "ingress": [],
            "name": "nginx-sg",
            "name_prefix": "",
            "owner_id": "669699159433",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "nginx-SG",
              "Owner-Email": "tofadeolawale@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "nginx-SG",
              "Owner-Email": "tofadeolawale@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-092c3f17dad11b29e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669699159433:security-group/sg-01315a65f9a7afaff",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01315a65f9a7afaff",
            "ingress": [],
            "name": "my-asg-sg",
            "name_prefix": "",
            "owner_id": "669699159433",
            "revoke_rules_on_delete": false,
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "webserver-sg",
              "Owner-Email": "tofadeolawale@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "webserver-sg",
              "Owner-Email": "tofadeolawale@gmail.com"
            },
            "timeouts": null,
            "vpc_id": "vpc-092c3f17dad11b29e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-bastion-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-2876602509",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f74fc1a504c46b2d",
            "self": false,
            "source_security_group_id": "sg-0ea1aa10cfbcc9f8c",
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-ialb-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-3964669658",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-003e2219fb04f3bf2",
            "self": false,
            "source_security_group_id": "sg-0f74fc1a504c46b2d",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-1599569327",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e85d888d7450c65f",
            "self": false,
            "source_security_group_id": "sg-0ea1aa10cfbcc9f8c",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.datalayer-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-mysql-webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-2602067865",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e85d888d7450c65f",
            "self": false,
            "source_security_group_id": "sg-01315a65f9a7afaff",
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.datalayer-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nfs-port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2049,
            "id": "sgrule-148829971",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e85d888d7450c65f",
            "self": false,
            "source_security_group_id": "sg-01315a65f9a7afaff",
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.datalayer-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-nginx-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-2683170168",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f74fc1a504c46b2d",
            "self": false,
            "source_security_group_id": "sg-0d958591cdf72c583",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ext-alb-sg",
            "aws_security_group.nginx-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-1380243160",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01315a65f9a7afaff",
            "self": false,
            "source_security_group_id": "sg-003e2219fb04f3bf2",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.int-alb-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound-web-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-3938373835",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-01315a65f9a7afaff",
            "self": false,
            "source_security_group_id": "sg-0ea1aa10cfbcc9f8c",
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion_sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669699159433:subnet/subnet-0c978bea35cfb3172",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c978bea35cfb3172",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "669699159433",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "private subnet of the resource",
              "Owner-Email": "tofadeolawale@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "private subnet of the resource",
              "Owner-Email": "tofadeolawale@gmail.com"
            },
            "vpc_id": "vpc-092c3f17dad11b29e"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669699159433:subnet/subnet-0c432023662881fb0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c432023662881fb0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "669699159433",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "private subnet of the resource",
              "Owner-Email": "tofadeolawale@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "private subnet of the resource",
              "Owner-Email": "tofadeolawale@gmail.com"
            },
            "vpc_id": "vpc-092c3f17dad11b29e"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669699159433:subnet/subnet-060c6fc4b5330b52f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060c6fc4b5330b52f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "669699159433",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "private subnet of the resource",
              "Owner-Email": "tofadeolawale@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "private subnet of the resource",
              "Owner-Email": "tofadeolawale@gmail.com"
            },
            "vpc_id": "vpc-092c3f17dad11b29e"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669699159433:subnet/subnet-06106165ec3ea41b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06106165ec3ea41b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "669699159433",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "private subnet of the resource",
              "Owner-Email": "tofadeolawale@gmail.com"
            },
            "tags_all": {
              "Billing-Account": "1234567890",
              "Enviroment": "production",
              "Managed-By": "Terraform",
              "Name": "private subnet of the resource",
              "Owner-Email": "tofadeolawale@gmail.com"
            },
            "vpc_id": "vpc-092c3f17dad11b29e"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669699159433:subnet/subnet-00021c04e9f05027f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00021c04e9f05027f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "669699159433",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-092c3f17dad11b29e"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669699159433:subnet/subnet-03f83b1931202a7e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f83b1931202a7e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "669699159433",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-092c3f17dad11b29e"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:669699159433:vpc/vpc-092c3f17dad11b29e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01129ddea6bdbade0",
            "default_route_table_id": "rtb-0093790aae4281475",
            "default_security_group_id": "sg-0f888a9c3fc681649",
            "dhcp_options_id": "dopt-0f22727063b3e0e22",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-092c3f17dad11b29e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0093790aae4281475",
            "owner_id": "669699159433"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}